--- a/catalog/view/theme/default/template/extension/module/html.twig
+++ b/catalog/view/theme/default/template/extension/module/html.twig
@@ -1,4 +1,4 @@
-<div>{% if heading_title %}
+{% if heading_title %}
   <h2>{{ heading_title }}</h2>
-  {% endif %}
-  {{ html }}</div>
+{% endif %}
+{{ html }}
