--- a/catalog/view/theme/default/template/extension/module/sms.twig
+++ b/catalog/view/theme/default/template/extension/module/sms.twig
@@ -8,41 +8,47 @@
 #}
 {% if method != 2 %}
 
-    
-	<main class="main-authorization">
-        <div class="breadcrumbs _container"> 
-          <div class="breadcrumbs__list">  
-            <a class="breadcrumbs__link" href="/">Главная</a><span>Авторизация</span></div>
+	<main>
+    <div class="breadcrumbs">
+      <div class="container">
+        <div class="breadcrumbs__list">  
+          <a class="breadcrumbs__link" href="/">Главная</a>
+          <span>Авторизация</span>
         </div>
-        <div class="authorization _container">
-          <h2 class="authorization__title">Войти или создать профиль</h2>
-          <form class="form authorization__form" action="" novalidate>
-            <div id="login_phone_form">
-			<div class="form__item">
+      </div>
+    </div>
+    <section class="s-authorization">
+      <div class="authorization">
+        <h2 class="authorization__title">Войти или создать профиль</h2>
+        <form class="form authorization__form" action="" novalidate>
+          <div id="login_phone_form">
+            <div class="form__item">
               <input class="form__input form__phone tel" id="send_telephone" name="telephone" value="" placeholder="" class="form-control masked" data-mask="{{phone_mask}}" autocomplete="off" required>
               <label class="form__label tel" for="send_telephone">Телефон <span>*</span></label>
             </div>
-			      <div style="display: none;" class="alert alert-danger"></div>
-            <input class="btn-default authorization__submit w-full" type="submit" id="get_code" type="button" disabled="disabled" value="Получить код">
-			</div>
-			<div id="login_code_form" style="display: none;">
-			<div class="form__item">
-				<p id="result_telephone"></p>
-				    <div class="form__item">
-						<input class="form__input form__phone tel" id="sms_code" name="code" value="" placeholder="XXXX" class="form-control masked" data-mask="0000" autocomplete="off" required>
-						<label class="form__label tel" for="sms_code">{{entry_code}}<span>*</span></label>
-					</div>
-				<button class="btn btn-link" type="button" id="sms_result"  disabled="disabled" style="display: none;" data-text="{{entry_repeat}}" data-load-text="{{entry_send_again}}"></button>
-            <br>
             <div style="display: none;" class="alert alert-danger"></div>
-            <button class="btn btn-primary" id="send_code" type="button" disabled="disabled">{{entry_sendcode}}</button>
-            <br>
-            <button class="btn btn-link" type="button" id="back_form">{{entry_back}}</button>
-			</div></div>
-            <div class="consent">Нажимая на кнопку, вы соглашетесь с <a href="">Условиями обработки персональных данных</a></div>
-          </form>
-        </div>
-      </main>
+            <button type="submit" disabled class="btn-default w-full mt-8" id="get_code">Получить код</button>
+          </div>
+          <div id="login_code_form" style="display: none;">
+            <div class="form__item">
+              <p id="result_telephone"></p>
+              <div class="form__item">
+                <input class="form__input form__phone tel" id="sms_code" name="code" value="" placeholder="XXXX" class="form-control masked" data-mask="0000" autocomplete="off" required>
+                <label class="form__label tel" for="sms_code">{{entry_code}}<span>*</span></label>
+              </div>
+              <button class="btn btn-link" type="button" id="sms_result"  disabled="disabled" style="display: none;" data-text="{{entry_repeat}}" data-load-text="{{entry_send_again}}"></button>
+              <br>
+              <div style="display: none;" class="alert alert-danger"></div>
+              <button class="btn btn-primary" id="send_code" type="button" disabled="disabled">{{entry_sendcode}}</button>
+              <br>
+              <button class="btn btn-link" type="button" id="back_form">{{entry_back}}</button>
+            </div>
+          </div>
+          <div class="consent">Нажимая на кнопку, вы соглашетесь с <a href="">Условиями обработки персональных данных</a></div>
+        </form>
+      </div>
+    </section>
+  </main>
 	
 	
 	
