--- a/catalog/view/theme/default/template/information/support.twig
+++ b/catalog/view/theme/default/template/information/support.twig
@@ -1,16 +1,28 @@
-      {{ header }}
-	  <main>
-        <div class="breadcrumbs _container"> 
-          <div class="breadcrumbs__list">  <a class="breadcrumbs__link" href="index.html">Главная</a><span>Техподдержка</span></div>
-        </div>
-        <div class="support _container">
-          <h2 class="title support__title">Техподдержка</h2>
-          <div class="support__content"> 
-            <div class="support__links"> <a class="support__link" href="tel:+7 (918) 599-96-21">+7 (918) 599-96-21</a><a class="support__link" href="mailto:igrushki.veloopt2@toysbag.ru">igrushki.veloopt2@toysbag.ru</a></div>
-            <a href="/index.php?route=information/contact"><button class="btn-default">Написать нам </button></a>
+{{ header }}
+<main>
+  <div class="breadcrumbs">
+    <div class="container">
+      <div class="breadcrumbs__list">
+        <a class="breadcrumbs__link" href="/">Главная</a>
+        <span>Техподдержка</span>
+      </div>
+    </div>
+  </div>
+  <section class="s-support">
+    <div class="container">
+      <div class="support">
+        <h2 class="title support__title">Техподдержка</h2>
+        <div class="support__content"> 
+          <div class="support__links">
+            <a class="support__link" href="tel:+79185999621">+7 (918) 599-96-21</a>
+            <a class="support__link" href="mailto:igrushki.veloopt2@toysbag.ru">igrushki.veloopt2@toysbag.ru</a>
           </div>
+          <a href="/index.php?route=information/contact" class="btn-default">Написать нам</a>
         </div>
-
-      </main>
-      <script src="js/mask.js"></script>
-	  {{ footer }}
+      </div>
+    </div>
+  </section>
+</main>
+{{ content_bottom }}
+<script src="js/mask.js"></script>
+{{ footer }}
