--- a/catalog/view/theme/default/template/product/product.twig
+++ b/catalog/view/theme/default/template/product/product.twig
@@ -1,128 +1,153 @@
 {{ header }}
-<div id="product" class="container">
-<div class="product _container"> 
-          <div class="product__main"> 
-            <div class="gallery-container"> <a class="advant" href=""> <img src="img/advant.png" alt=""></a>
-              <div class="swiper-container gallery-main"> 
-                <div class="swiper-wrapper"> 
-                  <div class="swiper-slide"><img src="{{ thumb }}" alt="">
-                    <button class="favorite" onclick="wishlist.add('{{ product_id }}');"> 
-                      <svg width="24" height="24">
-                        <use href="#heart-icn"></use>
-                      </svg>
-                    </button>
-                  </div>
-				  {% for image in images %}
-                  <div class="swiper-slide"><img src="{{ thumb }}" alt="">
-                    <button class="favorite" onclick="wishlist.add('{{ product_id }}');"> 
-                      <svg width="24" height="24">
-                        <use href="#heart-icn"></use>
-                      </svg>
-                    </button>
-                  </div>
-				  {% endfor %}
-                </div>
-                <div class="swiper-pagination"></div>
-              </div>
-              <div class="gallery-thumbs-wrap">
-                <div class="swiper-container gallery-thumbs"> 
+<div id="product">
+  <div class="container">
+    <div class="product">
+            <div class="product__main"> 
+              <div class="gallery-container"> <a class="advant" href=""> <img src="img/advant.png" alt=""></a>
+                <div class="swiper-container gallery-main"> 
                   <div class="swiper-wrapper"> 
-                    {% for image in images %}<div class="swiper-slide"><img src="{{ image.thumb }}" alt=""></div>{% endfor %}
-                  </div>
-                </div>
-                <div class="swiper-button-prev">
-                   <svg width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M13.2797 10.0334L8.93306 5.68676C8.41973 5.17342 7.57973 5.17342 7.06639 5.68676L2.71973 10.0334" stroke="#292D32" stroke-width="1.5" stroke-miterlimit="10" stroke-linecap="round" stroke-linejoin="round"/></svg></div>
-                <div class="swiper-button-next">
-                   <svg width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M13.2797 5.9668L8.93306 10.3135C8.41973 10.8268 7.57973 10.8268 7.06639 10.3135L2.71973 5.9668" stroke="#292D32" stroke-width="1.5" stroke-miterlimit="10" stroke-linecap="round" stroke-linejoin="round"/></svg></div>
-              </div>
-            </div>
-            <div class="character"> 
-              <div class="character__head">
-                <div class="character__brend"><a href="{{ manufacturers }}"> {{ manufacturer }}</a></div>
-                <div class="character__title">{{ heading_title }}</div>
-                <div class="character__sub"> <span>Код товара: {{ model }}</span><span>   
-                    <svg width="14" height="14">
-                      <use href="#char-icn"></use>
-                    </svg>Характеристики</span></div><a class="character__link" href="">Перейти к описанию → </a>
-              </div>
-              <div class="character__content"> 
-                {% if special %}<div class="character__price"> <span class="character__price-old">{{ price }}</span><span class="character__price-new">{{ special }}</span></div>{% else %}
-				<div class="character__price"> <span class="character__price-new">{{ price }}</span></div>{% endif %}
-				{% for option in options %}
-                <div class="character__type"> <span>{{ option.name }}</span>
-                  <div class="character__type-block select-block" style="padding-bottom: 30px;"> 
-				  {% for option_value in option.product_option_value %}
-                    {% if option_value.image %}
-					<div class="item"> 
-                      <input type="radio" name="option[{{ option.product_option_id }}]" id="{{ option_value.product_option_value_id }}" value="{{ option_value.product_option_value_id }}">
-                      <label for="{{ option_value.product_option_value_id }}"> <img src="{{ option_value.image }}" alt="{{ option_value.name }}"></label>
+                    <div class="swiper-slide"><img src="{{ thumb }}" alt="">
+                      <button class="favorite" onclick="wishlist.add('{{ product_id }}');"> 
+                        <svg width="24" height="24">
+                          <use href="#heart-icn"></use>
+                        </svg>
+                      </button>
                     </div>
-					{% else %}
-					<div class="item"> 
-                      <input type="radio" name="option[{{ option.product_option_id }}]" id="{{ option_value.product_option_value_id }}"  value="{{ option_value.product_option_value_id }}" checked>
-                      <label for="{{ option_value.product_option_value_id }}">{{ option_value.name }}</label>
-                    </div>
-					{% endif %}
-					{% endfor %}
-                  </div>
-				   </div>
-				   {% endfor %}
-              </div>
-              <div class="character__footer"> 
-			  <input type="hidden" name="product_id" value="{{ product_id }}" />
-                <button class="btn-default character__btn" type="button" id="button-cart" data-loading-text="{{ text_loading }}">Добавить в корзину</button>
-                <button class="btn-light character__btn">Купить в один клик</button>
-              </div>
-			  
-            </div>
-          </div>
-          <div class="container2">
-            <div class="block-params tab" id="tab-1">
-              <div class="block-params__head tab-nav">
-                <button class="tab-btn tab-btn-active" data-target-id="0">Описание</button>
-                <button class="tab-btn" data-target-id="1">Характеристики</button>
-                <button class="tab-btn" data-target-id="2">Инструкции</button>
-              </div>
-              <div class="tab-content">
-                <div class="descr tab-pane tab-pane-show" data-id="0">
-                  {{ description }}
-                </div>
-                <div class="characters tab-pane" data-id="1">
-                  <h2 class="characters__title title block-params__title">Характеристики</h2>
-                  <div class="table">
-                    <table> 
-					{% for attribute_group in attribute_groups %}
-                      <thead> 
-                        <tr>
-                          <th colspan="2">{{ attribute_group.name }}</th>
-                          <th></th>
-                        </tr>
-                      </thead>
-					
-                      <tbody> 
-                        {% for attribute in attribute_group.attribute %}
-						<tr> 
-                          <td>{{ attribute.name }}</td>
-                          <td>{{ attribute.text }}</td>
-                        </tr>
-						{% endfor %}
-                      </tbody> {% endfor %}
-                    </table><a class="table__link" href="">Смотреть все характеристики</a>
-                  </div>
-                </div>
-                <div class="instruction tab-pane" data-id="2">
-                  <div class="instruction__wrapper"> 
-                    <div class="instruction__head"> 
-                      <div class="instruction__head"> 
-                        <h2 class="instruction__title title block-params__title">Инструкции к товару</h2>
+                    {% for image in images %}
+                      <div class="swiper-slide">
+                        <img src="{{ thumb }}" alt="">
+                        <button type="button" class="favorite" onclick="wishlist.add('{{ product_id }}');"> 
+                          <svg width="24" height="24">
+                            <use href="#heart-icn"></use>
+                          </svg>
+                        </button>
                       </div>
+                    {% endfor %}
+                  </div>
+                  <div class="swiper-pagination"></div>
+                </div>
+                <div class="gallery-thumbs-wrap">
+                  <div class="swiper-container gallery-thumbs"> 
+                    <div class="swiper-wrapper"> 
+                      {% for image in images %}
+                        <div class="swiper-slide">
+                          <img src="{{ image.thumb }}" alt="">
+                        </div>
+                      {% endfor %}
                     </div>
-                    <video class="insctruction__video" src="video-home.mp4" controls autoplay poster="img/poster.png"> </video>
+                  </div>
+                  <div class="swiper-button-prev">
+                    <svg width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
+                      <path d="M13.2797 10.0334L8.93306 5.68676C8.41973 5.17342 7.57973 5.17342 7.06639 5.68676L2.71973 10.0334" stroke="#292D32" stroke-width="1.5" stroke-miterlimit="10" stroke-linecap="round" stroke-linejoin="round"/>
+                    </svg>
+                  </div>
+                  <div class="swiper-button-next">
+                    <svg width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
+                      <path d="M13.2797 5.9668L8.93306 10.3135C8.41973 10.8268 7.57973 10.8268 7.06639 10.3135L2.71973 5.9668" stroke="#292D32" stroke-width="1.5" stroke-miterlimit="10" stroke-linecap="round" stroke-linejoin="round"/>
+                    </svg>
+                  </div>
+                </div>
+              </div>
+              <div class="character"> 
+                <div class="character__head">
+                  <div class="character__brend">
+                    <a href="{{ manufacturers }}">{{ manufacturer }}</a>
+                  </div>
+                  <div class="character__title">{{ heading_title }}</div>
+                  <div class="character__sub"> 
+                    <span>Код товара: {{ model }}</span>
+                    <span>   
+                      <svg width="14" height="14">
+                        <use href="#char-icn"></use>
+                      </svg>
+                      Характеристики
+                    </span>
+                  </div>
+                  <a class="character__link" href="#">Перейти к описанию → </a>
+                </div>
+                <div class="character__content"> 
+                  {% if special %}<div class="character__price"> <span class="character__price-old">{{ price }}</span><span class="character__price-new">{{ special }}</span></div>{% else %}
+            <div class="character__price">
+              <span class="character__price-new">{{ price }}</span>
+              </div>{% endif %}
+          {% for option in options %}
+                  <div class="character__type"> <span>{{ option.name }}</span>
+                    <div class="character__type-block select-block" style="padding-bottom: 30px;"> 
+            {% for option_value in option.product_option_value %}
+                      {% if option_value.image %}
+            <div class="item"> 
+                        <input type="radio" name="option[{{ option.product_option_id }}]" id="{{ option_value.product_option_value_id }}" value="{{ option_value.product_option_value_id }}">
+                        <label for="{{ option_value.product_option_value_id }}"> <img src="{{ option_value.image }}" alt="{{ option_value.name }}"></label>
+                      </div>
+            {% else %}
+            <div class="item"> 
+                        <input type="radio" name="option[{{ option.product_option_id }}]" id="{{ option_value.product_option_value_id }}"  value="{{ option_value.product_option_value_id }}" checked>
+                        <label for="{{ option_value.product_option_value_id }}">{{ option_value.name }}</label>
+                      </div>
+            {% endif %}
+            {% endfor %}
+                    </div>
+            </div>
+            {% endfor %}
+                </div>
+                <div class="character__footer"> 
+                  <input type="hidden" name="product_id" value="{{ product_id }}" />
+                  <button class="btn-default character__btn" type="button" id="button-cart" data-loading-text="{{ text_loading }}">Добавить в корзину</button>
+                  <button type="button" class="btn-light character__btn">Купить в один клик</button>
+                </div>
+          
+              </div>
+            </div>
+            <div class="container2">
+              <div class="block-params tab" id="tab-1">
+                <div class="block-params__head tab-nav">
+                  <button class="tab-btn tab-btn-active" data-target-id="0">Описание</button>
+                  <button class="tab-btn" data-target-id="1">Характеристики</button>
+                  <button class="tab-btn" data-target-id="2">Инструкции</button>
+                </div>
+                <div class="tab-content">
+                  <div class="descr tab-pane tab-pane-show" data-id="0">
+                    {{ description }}
+                  </div>
+                  <div class="characters tab-pane" data-id="1">
+                    <h2 class="characters__title title block-params__title">Характеристики</h2>
+                    <div class="table">
+                      <table> 
+            {% for attribute_group in attribute_groups %}
+                        <thead> 
+                          <tr>
+                            <th colspan="2">{{ attribute_group.name }}</th>
+                            <th></th>
+                          </tr>
+                        </thead>
+            
+                        <tbody> 
+                          {% for attribute in attribute_group.attribute %}
+              <tr> 
+                            <td>{{ attribute.name }}</td>
+                            <td>{{ attribute.text }}</td>
+                          </tr>
+              {% endfor %}
+                        </tbody> {% endfor %}
+                      </table><a class="table__link" href="">Смотреть все характеристики</a>
+                    </div>
+                  </div>
+                  <div class="instruction tab-pane" data-id="2">
+                    <div class="instruction__wrapper"> 
+                      <div class="instruction__head"> 
+                        <div class="instruction__head"> 
+                          <h2 class="instruction__title title block-params__title">Инструкции к товару</h2>
+                        </div>
+                      </div>
+                      <video class="insctruction__video" src="video-home.mp4" controls poster="img/poster.png"> </video>
+                    </div>
                   </div>
                 </div>
               </div>
             </div>
-          </div>
+    </div>
+  </div>
+</div>
 
 <script type="text/javascript">
 $('#button-cart').on('click', function() {
