Предварительная настройка страницы поиска

--- a/catalog/view/theme/default/template/common/footer.twig
+++ b/catalog/view/theme/default/template/common/footer.twig
@@ -38,7 +38,7 @@
                 <use href="#main-mobile-icn"></use>
               </svg>
             </a>
-            <a href="/">
+            <a href="/index.php?route=product/search">
               <svg width="25" height="23">
                 <use href="#search-mobile-icn"></use>
               </svg>
